--- a/module2-solution/css/styling.css
+++ b/module2-solution/css/styling.css
@@ -7,30 +7,37 @@
 }
 h1 {
   margin-bottom: 15px;
+  text-align: center;
 }
 
 h2 {
-	width: 90px;
-	height: 30px;
-	border: 1px solid black;
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin-top: 0px;
-	margin-right: 20px;
-	text-align: center;
+  width: 90px;
+  height: 30px;
+  border: 1px solid black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0px;
+  text-align: center;
+  background-color: #A52A2A;
+  color: white;
 }
 
 div{
-	position: relative;
-	border-color: transparent;
+  position: relative;
+  background-color: white;
+}
+
+div.inner{
+  margin: 10px;
+  background-color: grey;
+  border: 2px solid black;
 }
 
 p {
-  border: 2px solid black;
-  background-color: #A52A2A;
+  border: none;
   width: 90%;
-  height: 150px;
+  height: 250px;
   margin-top: 30px;
   margin-right: 15px;
   margin-left: 15px;
@@ -42,13 +49,13 @@ p {
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
+  gap: 20px;
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -92,7 +99,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -136,7 +142,6 @@ p {
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-sm-1 {
     width: 8.33%;
