--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,1 +1,138 @@
+body {
+  font-size: 16px;
+  color: #fff;
+  font-family: sans-serif;
+}
 
+/** HEADER **/
+#header-nav {
+  background-color: grey;
+  border-radius: 0;
+  border: 0;
+}
+
+.navbar-brand {
+  padding-top: 25px;
+}
+
+nav.navbar{
+  background-color: grey;
+}
+
+.navbar>.container-fluid{
+  background-color: grey;
+}
+
+.navbar-brand h1 { /* Restaurant name */
+  font-family: serif;
+  color: black;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
+}
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+
+#nav-list {
+  margin-top: 10px;
+}
+#nav-list a {
+  color: #951C49;
+  text-align: center;
+}
+#nav-list a:hover {
+  background: #E7E7E7;
+}
+#nav-list a span {
+  font-size: 1.8em;
+}
+.navbar-toggler{
+  border: 2px solid black;
+}
+span.navbar-toggler-icon {
+  display: block;
+  background-color: black; /* Set the lines' color to black */
+  height: 3px;
+  width: 30px;
+  margin: 4px auto;
+}
+.navbar-nav {
+  background-color: grey;
+}
+.navbar-nav .nav-link {
+  color: white;
+}
+/* END HEADER */
+
+/* MAIN CONTENT */
+h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: black;
+}
+h3.menu-item{
+	margin-bottom: 0;
+	text-align: center;
+}
+div{
+  position: relative;
+  background-color: white;
+}
+
+div.inner{
+  margin: 10px;
+  background-color: grey;
+  border: 2px solid black;
+}
+
+p {
+  border: none;
+  width: 90%;
+  height: 700px;
+  margin-right: 15px;
+  margin-left: 15px;
+  padding: 10px;
+  font-family: Helvetica;
+  color: white;
+}
+
+/* END MAIN CONTENT */
+
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+	
+}
+
+/********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+ 
+}
+
+/********** Small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/********** Extra small devices only **********/
+@media (max-width: 767px) {
+  /* Header */
+  .navbar-brand {
+    padding-top: 10px;
+    height: 50px;
+  }
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+  }
+
+  #collapsable-nav a { /* Collapsed nav menu text */
+    font-size: 1.2em;
+  }
+  /* End Header */
+
+}
